src/objects/Comprehensive_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Overall_ourcome_after_alcohol_treatment__c</fullName>
        <inlineHelpText>What, in your opinion, was the overall outcome for you 
and your alcohol use having received this 
help / treatment?</inlineHelpText>
        <label>Overall ourcome after alcohol treatment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_ourcome_after_drug_treatment__c</fullName>
        <inlineHelpText>What, in your opinion, was the overall outcome for you and your drug use having received of this help / treatment?</inlineHelpText>
        <label>Overall ourcome after drug treatment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPS_Number__c</fullName>
        <formula>Client__r.PPS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Physical Health-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Please_details_re_benefits_not_recived__c</fullName>
        <inlineHelpText>Are there any benefits you think you may be entitled to that you are not receiving? Please give details:</inlineHelpText>
        <label>Please details re benefits not recived</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_health_insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private health insurance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Protec_against_sexual_trans_infections__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you know how you can protect yourself against sexually transmitted infections?</inlineHelpText>
        <label>Protec against sexual trans infections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Psychiatrist_or_doctor_that_treated_you__c</fullName>
        <inlineHelpText>Can you tell me the name and address of the psychiatrist or doctor that treated you:</inlineHelpText>
        <label>Psychiatrist or doctor that treated you</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_referral__c</fullName>
        <inlineHelpText>Can you give me some details about the reason for your referral? (What are the issues / difficulties you have been experiencing?)</inlineHelpText>
        <label>Reason for referral</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_why_you_want_to_make_changes_now__c</fullName>
        <inlineHelpText>Is there a reason why you want to make theses changes now? Please elaborate:</inlineHelpText>
        <label>Reason why you want to make changes now</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Received_a_prison_sentence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received a prison sentence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_info_re_Needle_exchange_service__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has information been given to you on: (If applicable) 
Needle exchange services:</inlineHelpText>
        <label>Received info re Needle exchange service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_info_re_Safer_drug_use_practice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has information been given to you on: (If applicable)
Safer drug using practices:</inlineHelpText>
        <label>Received info re Safer drug use practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_info_re_Safer_sex_practise__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has information been given to you on: (If applicable)                                                                                               
Safer sex practise:</inlineHelpText>
        <label>Received info re Safer sex practise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recreational_activity_to_get_involved_in__c</fullName>
        <inlineHelpText>If ‘no’ to above, is there any recreational activity you would like to get involved in? Please give details</inlineHelpText>
        <label>Recreational activity to get involved in</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_date__c</fullName>
        <label>Referral date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_made_to_service_1__c</fullName>
        <label>Referral made to service 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_made_to_service_2__c</fullName>
        <label>Referral made to service 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_made_to_service_3__c</fullName>
        <label>Referral made to service 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_from__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred from</label>
        <referenceTo>eCASS02t1__Referral__c</referenceTo>
        <relationshipLabel>Comprehensive Assessments</relationshipLabel>
        <relationshipName>Comprehensive_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_Contact__c</fullName>
        <formula>HYPERLINK(Referred_from__r.eCASS02t1__Referred_from_Contact__r.Id,  Referred_from__r.eCASS02t1__Referred_from_Contact__r.eCASS02t1__Full_name__c, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comprehensive Assessments (Referrer)</relationshipLabel>
        <relationshipName>Comprehensive_Assessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Agency_Address__c</fullName>
        <formula>Referred_from__r.eCASS02t1__Referred_from_Organisation_external__r.BillingStreet &amp;  BR() &amp;  Referred_from__r.eCASS02t1__Referred_from_Organisation_external__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Agency Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Agency__c</fullName>
        <formula>HYPERLINK(Referred_from__r.eCASS02t1__Referred_from_Organisation_external__c,  Referred_from__r.eCASS02t1__Referred_from_Organisation_external__r.Name, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationhip_to_you_1__c</fullName>
        <inlineHelpText>Who do you currently live with? (Refer to Initial Assessment)</inlineHelpText>
        <label>Relationhip to you 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationhip_to_you_2__c</fullName>
        <inlineHelpText>Who do you currently live with? (Refer to Initial Assessment)</inlineHelpText>
        <label>Relationhip to you 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationhip_to_you_3__c</fullName>
        <inlineHelpText>Who do you currently live with? (Refer to Initial Assessment)</inlineHelpText>
        <label>Relationhip to you 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_you__c</fullName>
        <formula>TEXT( Client__r.NOK_Relationship__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship to you</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religious_Spiritual_Matters_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Religious/Spiritual Matters-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result_outcomes_do_you_hope_for_yourself__c</fullName>
        <inlineHelpText>What results/ outcomes do you hope for yourself and your life in making these changes?</inlineHelpText>
        <label>Result/outcomes do you hope for yourself</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDS_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDS 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDS_1_for_which_substance__c</fullName>
        <label>SDS 1 for which substance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDS_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDS 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDS_2_for_which_substance__c</fullName>
        <label>SDS 2 for which substance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDS_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDS 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDS_3_for_which_substance__c</fullName>
        <label>SDS 3 for which substance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDS_Total__c</fullName>
        <formula>Do_you_wish_you_could_stop__c +  is_use_out_of_control__c +  Anxiety_at_prospect_of_mixing_fix__c +  Worry_about_use__c +  How_difficult_did_you_find_it_to_stop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDS Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substance_use_has_impacted_employment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think that your substance use has impacted or is impacting on your employment situation?</inlineHelpText>
        <label>Substance use has impacted employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_1_re_family_relationship_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your family and relationships in the short term: (If applicable)</inlineHelpText>
        <label>Support 1 re family &amp; relationship ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_1_re_general_dental_health_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your general/ dental health in the short term? (If applicable)</inlineHelpText>
        <label>Support 1 re general/dental health ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_1_re_mental_psyco_health_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your mental/ psychological/ emotional health in the short term?  (If applicable)</inlineHelpText>
        <label>Support 1 re mental/psyco health ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_2_re_family_relationship_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your family and relationships in the short term: (If applicable)</inlineHelpText>
        <label>Support 2 re family &amp; relationship ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_2_re_general_dental_health_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your general/ dental health in the short term? (If applicable)</inlineHelpText>
        <label>Support 2 re general/dental health ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_2_re_mental_psyco_health_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your mental/ psychological/ emotional health in the short term?  (If applicable)</inlineHelpText>
        <label>Support 2 re mental/psyco health ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_3_re_family_relationship_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your family and relationships in the short term: (If applicable)</inlineHelpText>
        <label>Support 3 re family &amp; relationship ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_3_re_general_dental_health_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your general/ dental health in the short term? (If applicable)</inlineHelpText>
        <label>Support 3 re general/dental health ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_3_re_mental_psyco_health_ST__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your mental/ psychological/ emotional health in the short term?  (If applicable)</inlineHelpText>
        <label>Support 3 re mental/psyco health ST</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_re_Legal_Issue_ST_1__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your legal issues in the short term</inlineHelpText>
        <label>Support re Legal Issue ST 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_re_Legal_Issue_ST_2__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your legal issues in the short term</inlineHelpText>
        <label>Support re Legal Issue ST 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_re_Legal_Issue_ST_3__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your legal issues in the short term</inlineHelpText>
        <label>Support re Legal Issue ST 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_re__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your education &amp; training in the short term: (If applicable)</inlineHelpText>
        <label>Supports required re edu/training ST 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_accommodation_ST_1__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your accommodation and living arrangements in the short term:</inlineHelpText>
        <label>Support required re accommodation ST 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_accommodation_ST_2__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your accommodation and living arrangements in the short term:</inlineHelpText>
        <label>Support required re accommodation ST 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_accommodation_ST_3__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your accommodation and living arrangements in the short term:</inlineHelpText>
        <label>Support required re accommodation ST 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_cultural_matters_ST1__c</fullName>
        <inlineHelpText>Cultural &amp; ethnic matters: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re cultural matters ST1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_cultural_matters_ST2__c</fullName>
        <inlineHelpText>Cultural &amp; ethnic matters: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re cultural matters ST2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_cultural_matters_ST3__c</fullName>
        <inlineHelpText>Cultural &amp; ethnic matters: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re cultural matters ST3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_finances_ST_1__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your finances in the short term:</inlineHelpText>
        <label>Support required re finances ST 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_finances_ST_2__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your finances in the short term:</inlineHelpText>
        <label>Support required re finances ST 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_finances_ST_3__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your finances in the short term:</inlineHelpText>
        <label>Support required re finances ST 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_recre_activities_ST1__c</fullName>
        <inlineHelpText>Recreational activities / hobbies: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re recre activities ST1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_recre_activities_ST2__c</fullName>
        <inlineHelpText>Recreational activities / hobbies: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re recre activities ST2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_recre_activities_ST3__c</fullName>
        <inlineHelpText>Recreational activities / hobbies: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re recre activities ST3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_religious_matter_ST1__c</fullName>
        <inlineHelpText>Religious &amp; spiritual matters: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re religious matter ST1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_religious_matter_ST2__c</fullName>
        <inlineHelpText>Religious &amp; spiritual matters: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re religious matter ST2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_required_re_religious_matter_ST3__c</fullName>
        <inlineHelpText>Religious &amp; spiritual matters: What progress do you want/ supports do you require in the short term</inlineHelpText>
        <label>Support required re religious matter ST3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_required_re_edu_training_ST_1__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your education &amp; training in the short term: (If applicable)</inlineHelpText>
        <label>Supports required re edu/training ST 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_required_re_edu_training_ST_3__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your education &amp; training in the short term: (If applicable)</inlineHelpText>
        <label>Supports required re edu/training ST 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_required_re_employment_ST_1__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your employment situation in the short term</inlineHelpText>
        <label>Supports required re employment ST 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_required_re_employment_ST_2__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your employment situation in the short term</inlineHelpText>
        <label>Supports required re employment ST 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supports_required_re_employment_ST_3__c</fullName>
        <inlineHelpText>What progress do you want/ supports do you require in relation to your employment situation in the short term</inlineHelpText>
        <label>Supports required re employment ST 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_help_treatment_received_re_alcohol__c</fullName>
        <inlineHelpText>Please describe the type of help/ treatment you received: 
(E.g. individual counselling, group counselling, residential rehabilitation, 
etc)</inlineHelpText>
        <label>Type help/treatment received re alcohol</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_help_treatment_received_re_drug__c</fullName>
        <inlineHelpText>Please describe the type of help/ treatment you received:
(E.g. individual counselling, residential detox, residential rehabilitation, 
methadone maintenance, etc.)</inlineHelpText>
        <label>Type help/treatment received re drug</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_treatment_re_alcoho_required_now__c</fullName>
        <inlineHelpText>What type of help /treatment do you think would be beneficial to you now?</inlineHelpText>
        <label>Type of treatment re alcoho required now</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_treatment_re_drug_required_now__c</fullName>
        <inlineHelpText>What type of help /treatment do you think would be beneficial to you now?</inlineHelpText>
        <label>Type of treatment re drug required now</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_need_to_make_the_changes__c</fullName>
        <inlineHelpText>What do you think you need to do to make the changes you want?</inlineHelpText>
        <label>What do you need to make the changes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Withdrawal_symptom_stop_taking_substance__c</fullName>
        <inlineHelpText>Do you experience withdrawal symptoms when you stop taking substances? (Examples may include nausea, vomiting, diahorrea, abdominal discomfort, muscle aches, anxiety, irritability, insomnia, palpitations, shakes) please give details</inlineHelpText>
        <label>Withdrawal symptom stop taking substance</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Worry_about_use__c</fullName>
        <inlineHelpText>Did you worry about your use of the preference substance?
0 = Never/almost never
1 =Sometimes
2 = Often
3 = Always/nearly always</inlineHelpText>
        <label>Worry about use</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Would_like_a_test_for_HIV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would like a test for HIV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Would_like_a_test_for_Hepatitis_B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would like a test for Hepatitis B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Would_like_a_test_for_Hepatitis_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would like a test for Hepatitis C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Write_to_you_at_this_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Write to you at this address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Your_child_s_1_address_is_if_known__c</fullName>
        <label>Your child’s 1 address is: (if known)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Your_child_s_2_address_is_if_known__c</fullName>
        <label>Your child’s 2 address is: (if known)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Your_child_s_3_address_is_if_known__c</fullName>
        <label>Your child’s 3 address is: (if known)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_use_out_of_control__c</fullName>
        <inlineHelpText>Do you think the use of (preference substance) was out of control?
0 = Never/almost never
1 =Sometimes
2 = Often
3 = Always/nearly always</inlineHelpText>
        <label>is use out of control?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>when_you_had_your_last_smear__c</fullName>
        <inlineHelpText>If ‘yes’ can you give me an estimated date of when you had your last smear?</inlineHelpText>
        <label>when you had your last smear</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Comprehensive Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{YY}-{0000}</displayFormat>
        <label>Comprehensive Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comprehensive Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>